--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@plum/page-manager",
+  "name": "@plumelearning/page-manager",
   "version": "2.1.0",
   "description": "Page manager for Plum eLearning Vue courses",
   "main": "dist/bundle.common.js",
@@ -8,7 +8,7 @@
     "build": "rollup -c",
     "lint": "eslint src/*.js",
     "lint:fix": "eslint --fix src/*.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"No test specified\""
   },
   "private": false,
   "author": "John F MacDonald <jmacdonald@plumelearning.com> (https://plumelearning.com)",
