reset version 2.1.0 and try again with np

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@plumelearning/page-manager",
-  "version": "2.1.2",
+  "version": "2.1.0",
   "description": "Page manager for Plum eLearning Vue courses",
   "main": "dist/bundle.common.js",
   "module": "dist/bundle.esm.js",
@@ -12,7 +12,11 @@
   },
   "private": false,
   "author": "John F MacDonald <jmacdonald@plumelearning.com> (https://plumelearning.com)",
-  "license": "Apache 2.0",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/plumelearning/page-manager.git"
+  },
+  "license": "Apache-2.0",
   "devDependencies": {
     "babel-eslint": "^10.1.0",
     "eslint": "^6.8.0",
